principiantKubernates/manifesst-ingress/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: "First image" 
  name: deploy-prod
  labels: 
    app: api-deployment 
spec:
  replicas: 3
  selector: 
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
      - name: back
        image: dbastidas/symfony-k8s-back:v5
        ports: 
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: custom-node-service
spec:
  type: ClusterIP
  selector:
    app: back
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
