principiantKubernates/manifesst-ingress/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: "Front end deployment"
  name: front-end-deployment
  labels:
    name: app-front-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-front
  template:
    metadata:
      labels:
        app: app-front
    spec:
      containers:
      - name: web
        image: dbastidas/symfony-k8s-front:v4
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: custom-node-f-service
spec:
  type: ClusterIP
  selector:
    app: app-front
  ports: 
    - protocol: TCP
      port: 80
      targetPort: 80
